[package]
name = "telegram-capture-bot"
version = "0.1.0"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]
edition = "2018"

[dependencies]
telegram-bot = "0.7"
tokio = { version = "1.2", features = ["macros", "time", "fs", "rt-multi-thread"] }
tracing = "0.1.23"
tracing-futures = "0.2"
futures = "0.3"

[dev-dependencies]
tracing-subscriber = "0.2.15"
