[package]
name = "telegram-capture-bot"
version = "0.1.0"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]
edition = "2018"

[dependencies]
frankenstein = "0.3.1"
ureq = "2.1.1"
rusqlite = "^0.25"

rocket = {version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["sqlite_pool"] }

chrono = {  version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

metrics = "^0.15"
metrics-util = "^0.7"
metrics-exporter-prometheus = "0.4"

tracing = "0.1"
tracing-subscriber = "0.2"
